--- a/templates/web/pormibarrio/report/update-form.html
+++ b/templates/web/pormibarrio/report/update-form.html
@@ -1,5 +1,247 @@
 [% allow_creation = !c.cobrand.only_authed_can_create || (c.user && c.user.from_body) %]
 [% IF allow_creation %]
+
+			<!--<img alt="" src="images/image-report-ref.jpg" class="img-top">-->
+			<div class="info-report scrolled-report">
+				<!--Intro Report-->
+				<!--
+				<div class="intro-report">
+					<h3>Alcantarilla obstruida</h3>
+					<address>Bv. Gral. Artigas 1234 esq Eduardo Victor Haedo</address>
+					<p>
+					Donec quis turpis et elit vehicula dignissim ut quis lectus. Aenean gravida nisi vitae enim dignissim 
+					imperdiet. Ut eu viverra odio. Integer commodo massa mi, sit amet 
+					rutrum nunc vestibulum at. Integer viverra rhoncus mauris id laoreet. 
+					</p>
+					<span class="sign">Por <a href="javascript:;">Roberto Ricci</a>, ayer a las 19:00hs</span>
+				</div>
+				-->
+				<!--Status Report-->
+				<div class="status-report">
+					<h4>Estado del reporte</h4>
+					<ul>
+						<li>
+							Cuadrilla asignada para el 16/05/2014
+							<span class="time-report">hace 1 hr</span>
+						</li>
+						<li>
+							Problema ingresado al sistema
+							<span class="time-report">hace 4 días</span>
+						</li>
+					</ul>
+				</div>
+				
+				<!--Comments Report-->
+				<div class="comment-reports">
+					<!--
+					<div class="comment comment-user">
+						<div class="user-avatar"><img alt="" src="images/user-1.png"></div>
+						<div class="user-info">
+							<form role="form">
+								<textarea rows=""></textarea>
+							</form>
+						</div>                            
+					</div>
+					-->
+					<div class="comment">
+						<div class="user-avatar"><img alt="" src="images/user-2.png"></div>
+						<div class="user-info">
+							<h4>Zlatan Ibrahimovic</h4>
+							<span class="time-report">hace 2 días</span>
+						</div>
+						<div class="user-comment">
+							<p>
+								"You remember when your dad taught you to swim?" The boy nodded. "Well, in the University of 
+								California” - that is the name we had for the houses - we taught young men and women 
+								how to think, just as I have taught you now, by sand and pebbles and shells, to 
+								know how many 
+							</p>
+						</div>                            
+					</div>
+					<div class="comment imm-comment">
+						<div class="user-avatar"><img alt="" src="images/user-imm.png"></div>
+						<div class="user-info">
+							<h4>Intendencia de Montevideo</h4>
+							<span class="time-report">hace 4 días</span>
+						</div>
+						<div class="user-comment">
+							<p>
+								La cuadrilla #12345 fue asignada para resolver este problema para el 16/05. Cualquier consulta...
+							</p>
+						</div>                            
+					</div>
+					<div class="comment">
+						<div class="user-avatar"><img alt="" src="images/user-3.png"></div>
+						<div class="user-info">
+							<h4>Olivia Wilde</h4>
+							<span class="time-report">hace 2 meses</span>
+						</div>
+						<div class="user-comment">
+							<p>
+								Ok, I saw this yesterday.
+							</p>
+						</div> 
+						<div class="user-picture">
+							<img alt="" src="images/image-report-ref-user.jpg">
+						</div>                           
+					</div>
+				</div>
+				
+				<!--Update Report-->
+				[% INCLUDE 'errors.html' %]
+
+				<form method="post" action="[% c.uri_for( '/report/update' ) %]" id="form_update_form" name="updateForm" class="validate"[% IF c.cobrand.allow_photo_upload %] enctype="multipart/form-data"[% END %]>
+					<fieldset>
+						<input type="hidden" name="submit_update" value="1">
+						<input type="hidden" name="id" value="[% problem.id | html %]">
+
+						<label for="form_update">[% loc( 'Update' ) %]</label>
+						[% IF field_errors.update %]
+							<div class='form-error'>[% field_errors.update %]</div>
+						[% END %]
+						<textarea rows="7" cols="30" name="update" id="form_update" placeholder="[% loc('Please write your update here') %]" required>[% update.text | html %]</textarea>
+
+						[% IF c.user && c.user.belongs_to_body( problem.bodies_str ) %]
+							<label for="form_state">[% loc( 'State' ) %]</label>
+							<select name="state" id="form_state">
+							[% FOREACH state IN [ ['confirmed', loc('Open')], ['investigating',
+							loc('Investigating')], ['action scheduled', loc('Action Scheduled')],
+							['in progress', loc('In Progress')], ['duplicate', loc('Duplicate')],
+							['unable to fix', loc('Unable to fix')], ['not responsible', loc('Not Responsible')],
+							['fixed', loc('Fixed')] ] %]
+								<option [% 'selected ' IF state.0 == problem.state %] value="[% state.0 %]">[% state.1 %]</option>
+							[% END %]
+							</select>
+						[% ELSE %]
+							[% IF problem.is_fixed AND c.user_exists AND c.user.id == problem.user_id %]
+							
+							<input type="checkbox" name="reopen" id="form_reopen" value="1"[% ' checked' IF update.mark_open %]>
+							<label class="inline" for="form_reopen">[% loc('This problem has not been fixed') %]</label>
+							
+							[% ELSIF !problem.is_fixed %]
+							
+							<div class="checkbox-group">
+								<input type="checkbox" name="fixed" id="form_fixed" value="1"[% ' checked' IF update.mark_fixed %]>
+								<label class="inline" for="form_fixed">[% loc('This problem has been fixed') %]</label>
+							</div>
+
+							[% END %]
+						[% END %]
+
+					[% IF c.cobrand.allow_photo_upload %]
+						<div id="fileupload_normalUI">
+						[% IF upload_fileid %]
+							<img align="right" src="/photo/[% upload_fileid %].temp.jpeg" alt="">
+							<p>[% loc('You have already attached a photo to this update, attaching another one will replace it.') %]</p>
+							<input type="hidden" name="upload_fileid" value="[% upload_fileid %]">
+						[% END %]
+							<label for="form_photo">[% loc('Photo') %]</label>
+							[% IF field_errors.photo %]
+								<p class='form-error'>[% field_errors.photo %]</p>
+							[% END %]
+							<input type="file" name="photo" id="form_photo">
+						</div>
+					[% END %]
+
+					[% IF c.user_exists %]
+
+						[% INCLUDE name %]
+						
+						<input class="final-submit green-btn" type="submit" id="update_post" value="[% loc('Post') %]">
+							
+
+					[% ELSE %]
+
+						<h3>[% loc("Now to submit your update&hellip;") %]</h3>
+
+						<label for="form_rznvy">[% loc('Email' ) %]</label>
+						[% IF field_errors.email %]
+							<p class='form-error'>[% field_errors.email %]</p>
+						[% END %]
+						<input type="email" name="form_rznvy" id="form_rznvy" value="[% update.user.email | html %]" placeholder="[% loc('Your email address' ) %]">
+						
+						<div id="form_sign_in">
+							<h2>[% loc("Do you have a FixMyStreet password?") %]</h2>
+
+							<div id="form_sign_in_yes" class="form-box">
+								<h5>[% loc('<strong>Yes</strong> I have a password') %]</h5>
+
+								<label class="hidden-js n" for="password_sign_in">[% loc('Yes I have a password') %]</label>
+								[% IF field_errors.password %]
+									<p class='form-error'>[% field_errors.password %]</p>
+								[% END %]
+								<div class="form-txt-submit-box">
+									<input type="password" name="password_sign_in" id="password_sign_in" value="" placeholder="[% loc('Your password') %]">
+									<input class="green-btn" type="submit" name="submit_sign_in" id="submit_sign_in" value="[% loc('Post') %]">
+								</div>
+
+								<div class="checkbox-group">
+									<input type="checkbox" id="remember_me" name="remember_me" value='1'[% ' checked' IF remember_me %]>
+									<label class="inline n" for="remember_me">[% loc('Keep me signed in on this computer') %]</label>
+								</div>
+								<!--
+								<div class="general-sidebar-notes" id="forgotten-pw">
+									<p class="dark">[% loc('Forgotten your password?') %]</p>
+									<p>[% loc('Confirm by email below, providing a new password at that point. When you confirm, your password will be updated.') %]</p>
+								</div>
+								-->
+							</div>
+							<div id="form_sign_in_no" class="form-box">
+								<h5>[% loc('<strong>No</strong> Let me confirm my update by email') %]</h5>
+
+								[% INCLUDE name %]
+																	 
+								<div class="general-sidebar-notes">
+									<p class="dark">[% loc('We never show your email') %]</p>
+									<p>[% loc('Providing a password is optional, but doing so will allow you to more easily report problems, leave updates and manage your reports.') %]</p>
+								</div>
+
+								<label for="password_register">[% loc('Password (optional)') %]</label>
+
+								<div class="form-txt-submit-box">
+									<input type="password" name="password_register" id="password_register" value="" placeholder="[% loc('Enter a password') %]">
+									<input class="green-btn" type="submit" name="submit_register" id="submit_register" value="[% loc('Post') %]">
+								</div>
+							</div>
+							
+							<div id="form_sign_social" class="form-box">			
+								[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
+								<h5>[% loc('<strong>Or</strong> Use a social network account') %]</h5>
+								<div>
+									[% IF c.config.FACEBOOK_APP_ID %]
+									<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in"><img src="/i/FB-f-Logo__blue_50.png"/></button>
+									[% END %]
+									[% IF c.config.TWITTER_KEY %]
+									<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in"><img src="/i/Twitter_logo_blue_50px_50px.png"/></button>
+									[% END %]
+								</div>
+								[% END %]
+							</div>
+						</div>
+
+					[% END %]
+					</fieldset>
+				</form>
+				
+				[% BLOCK name %]
+					[% INCLUDE 'report/new/extra_name.html' %]
+					<label for="form_name">[% loc('Name') %]</label>
+					[% IF field_errors.name %]
+						<p class='form-error'>[% field_errors.name %]</p>
+					[% END %]
+					<input type="text" [% IF problem.bodies_str == '2482' %]class="validName" [% END %]name="name" id="form_name" value="[% update.name || c.user.name | html %]" placeholder="[% loc('Your name') %]">
+
+					<div class="checkbox-group">
+						<input type="checkbox" name="may_show_name" id="form_may_show_name" value="1"[% ' checked' IF update.anonymous==0 OR (c.cobrand.default_show_name AND update.anonymous=='') %]>
+						<label class="inline" for="form_may_show_name">[% loc('Show my name publicly') %]</label>
+					</div>
+					<div class="checkbox-group">
+						<input type="checkbox" name="add_alert" id="form_add_alert" value="1"[% ' checked' IF add_alert %]>
+						<label class="inline" for="form_add_alert">[% loc( 'Alert me to future updates' ) %]</label>
+					</div>
+				[% END %]		
+			</div>
+<!--
 <div id="update_form">
     <h2>[% loc( 'Provide an update') %]</h2>
 
@@ -143,9 +385,9 @@
         [% END %]
         </fieldset>
     </form>
-</div>
+</div>-->
 [% END %]
-
+<!--
 [% BLOCK name %]
     [% INCLUDE 'report/new/extra_name.html' %]
     <label for="form_name">[% loc('Name') %]</label>
@@ -163,3 +405,4 @@
         <label class="inline" for="form_add_alert">[% loc( 'Alert me to future updates' ) %]</label>
     </div>
 [% END %]
+-->
