--- a/templates/web/pormibarrio/report/display.html
+++ b/templates/web/pormibarrio/report/display.html
@@ -20,6 +20,7 @@
 	<div class="container-report">
 		<!--REPORT-->
 		<div class="report">
+			<div class="info-report scrolled-report">
 			
 [% INCLUDE 'report/_main.html' %]
 [% TRY %][% INCLUDE 'report/_message_manager.html' %][% CATCH file %][% END %]
@@ -78,6 +79,7 @@
 [% INCLUDE 'report/update-form.html' %]
 [% INCLUDE 'footer.html' %]
 
+			</div>
 		</div>
 		<!--end report-->
 	</div>
