--- a/web/cobrands/pormibarrio/layout.css
+++ b/web/cobrands/pormibarrio/layout.css
@@ -13,7 +13,12 @@ body{
 }
 #popup{color:#000}
 h1{margin-top:0}
-.container{margin:0 auto;padding:0em;width:60em;position:relative}
+.container{
+	margin:0 auto;
+	padding:0em;
+	width:auto;
+	position:relative
+}
 .ie6 .container,.ie7 .container{z-index:100}
 .wrapper{display:table;caption-side:top;width:100%}
 .table-cell{display:table-cell}
@@ -94,7 +99,7 @@ body.mappage .container{width:auto}
 body.mappage .content{
 	float:left;
 	padding:1em 1em 10em;
-	/*background-color:#C0C0C0;*/
+	background-color:#C0C0C0;
 }
 body.mappage #main-nav ul#main-menu li a,
 body.mappage #main-nav ul#main-menu li span{padding:1.4em 0.75em 1.35em 0.75em}
@@ -229,4 +234,27 @@ body.frontpage #user-meta p a{background:#fff;color:#1a1a1a}body.frontpage #user
 /*ALAMBRE*/
 .nav-wrapper {
 	display: none;
+}
+
+#geoOverlay{
+	background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+#geoOverDiv{
+	margin: 10% 30%;
+    text-align: center;
+    width: 40%;
+    background-color: gray;
+    opacity: 0.6;
+}
+
+#overlay-close, #goToMap{
+	margin: 10%;
 }
