--- a/templates/web/pormibarrio/report/update-form.html
+++ b/templates/web/pormibarrio/report/update-form.html
@@ -1,7 +1,7 @@
 [% allow_creation = !c.cobrand.only_authed_can_create || (c.user && c.user.from_body) %]
 [% IF allow_creation %]
-
 <!--Status Report-->
+<!--
 <div class="status-report">
 	<h4>Estado del reporte</h4>
 	<ul>
@@ -15,9 +15,9 @@
 		</li>
 	</ul>
 </div>
-
+-->
 <!--Comments Report-->
-<div class="comment-reports">
+<!--<div class="comment-reports">-->
 	<!--
 	<div class="comment comment-user">
 		<div class="user-avatar"><img alt="" src="images/user-1.png"></div>
@@ -28,7 +28,7 @@
 		</div>
 	</div>
 	-->
-	<div class="comment">
+	<!--<div class="comment">
 		<div class="user-avatar"><img alt="" src="images/user-2.png"></div>
 		<div class="user-info">
 			<h4>Zlatan Ibrahimovic</h4>
@@ -70,11 +70,9 @@
 			<img alt="" src="images/image-report-ref-user.jpg">
 		</div>
 	</div>
-</div>
-
+</div>-->
 <!--Update Report-->
 [% INCLUDE 'errors.html' %]
-
 <form method="post" action="[% c.uri_for( '/report/update' ) %]" id="form_update_form" name="updateForm" class="validate"[% IF c.cobrand.allow_photo_upload %] enctype="multipart/form-data"[% END %]>
 	<fieldset>
 		<div>
